--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
   },
@@ -42,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
