--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "framer-motion": "^10.9.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.2",
