--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "react-scroll": "^1.8.9",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
   },
