--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "framer-motion": "^10.9.1",
+    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.0.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
     "slick-carousel": "^1.8.1",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
   },
