--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,14 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.30.0",
+    "fontawesome": "^5.6.3",
+    "fontawesome-react": "^2.0.0",
     "framer-motion": "^10.9.1",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.0.0",
+    "react-fontawesome": "^1.7.1",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
